# nori

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Gemfile  LICENSE  LICENSE-MIT  README.md  _config.yml  index.md
.github/workflows/: ci.yml
_sass/: custom.scss
_sass/custom/: custom.scss
api-reference/: config.md  index.md  record.md  wal.md
apps/norikv-dashboard/: README.md  package.json
apps/norikv-server/: Cargo.toml  README.md
apps/norikv-vizd/: Cargo.toml  README.md
assets/css/: custom.scss
context/: 00_index.yaml  05_docs.yaml  10_product.yaml  20_architecture.yaml  30_storage.yaml  31_consensus.yaml  32_membership.yaml  33_placement.yaml  34_transport.yaml  35_metrics.yaml  36_dashboard.yaml  50_sdk_typescript.yaml  51_sdk_python.yaml  52_sdk_go.yaml  53_sdk_java.yaml  60_ops.yaml  70_testkit.yaml  80_open_questions.yaml  95_publishing.yaml
core-concepts/: fsync-policies.md  index.md  recovery-guarantees.md  what-is-wal.md  when-to-use.md
crates/nori-lsm/: Cargo.toml  README.md
crates/nori-observe/: Cargo.toml
crates/nori-sstable/: Cargo.toml  README.md
crates/nori-sstable/src/: lib.rs
crates/nori-wal/: Cargo.toml  README.md
crates/nori-wal/benches/: concurrent_writes.rs  read_performance.rs  recovery.rs  sequential_writes.rs
crates/nori-wal/src/: lib.rs  prealloc.rs  record.rs  recovery.rs  segment.rs  wal.rs
docs/: README.md
getting-started/: index.md  installation.md
how-it-works/: concurrency.md  index.md  record-format.md  recovery.md  segment-lifecycle.md
sdks/go/: README.md
(+23 files in other folders)
