[package]
name = "nori-sstable"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Immutable sorted tables with blocks, index, bloom, compression."
repository = "https://github.com/your-org/norikv"
readme = "README.md"

[dependencies]
nori-observe = { path = "../nori-observe" }
